[project]
name = "poolbot"
version = "0.1.0"
description = "PoolBot - A Discord bot for pool management"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.13",
    "discord-py==2.0.1",
    "google-api-python-client==2.164.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "python-dotenv==0.19.2",
    "pyyaml==6.0.2",
]

[tool.setuptools]
py-modules = ["PoolBot", "utils"]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.381",
    "types-PyYAML>=6.0.0",
]
